--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "npm": "4.5.0"
   },
   "dependencies": {
+    "base64-url": "^2.0.0",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "cors": "^2.8.3",
     "debug": "^2.6.6",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "moment": "^2.19.1",
     "mongoose": "^4.9.8",
     "mongoose-unique-validator": "^1.0.5",
     "morgan": "^1.8.1",
