--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "npm": "4.5.0"
   },
   "dependencies": {
+    "base-64": "^0.1.0",
     "base64-url": "^2.0.0",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "cors": "^2.8.3",
+    "crypto-js": "^3.1.9-1",
     "debug": "^2.6.6",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
@@ -22,6 +24,7 @@
     "mongoose-unique-validator": "^1.0.5",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
+    "node-forge": "^0.7.1",
     "serve-favicon": "^2.4.2"
   },
   "devDependencies": {
